# CuPBoP_Vortex

./: .gitignore  CuPBoP_env_setup_wo_PoCL.sh  README.md
.github/workflows/: ci.yml
ci/: CI_Docs.md  compare_golden.py  perf_summary.py  perf_summary_all.py  rg-ci-env-setup.sh  rg-ci-setup.sh  run-crnch-cuda-test.sh  run-crnch-cuda.sh
compilation/: KernelTranslation.cpp
data/b+tree/: command.txt
data/cfd/: extract_submesh.py  fvcorr.domn.768
data/huffman/: test256_small.in  test32k.in  test_256.in  test_tiny_1k.in
examples/: CC_batch_run.sh  CC_batch_warp_feature_run.sh  Makefile  collect_result.py  common.mk  result_comparison.py
examples/atomic_test/: Makefile  atomic_test.cu
examples/backprop/: Makefile  golden_output.txt  kernel_wrapper.cpp  kjrun_llvm18.sh
examples/bfs/: Makefile  kjrun_llvm18.sh  result_vortex.txt
examples/bh-cuda/: Makefile  main.cu
examples/blackscholes/: 0.ll  5.ll  6.ll  Makefile  README_cuda_port.md  a.out  cuda_blackscholes  cuda_blackscholes_all-cuda-nvptx64-nvidia-cuda-sm_50.bc  cuda_blackscholes_all-cuda-nvptx64-nvidia-cuda-sm_50.cubin  cuda_blackscholes_all-cuda-nvptx64-nvidia-cuda-sm_50.cui  cuda_blackscholes_all-cuda-nvptx64-nvidia-cuda-sm_50.ll  cuda_blackscholes_all-cuda-nvptx64-nvidia-cuda-sm_50.s  cuda_blackscholes_all-host-x86_64-unknown-linux-gnu.bc  cuda_blackscholes_all-host-x86_64-unknown-linux-gnu.cui  cuda_blackscholes_all-host-x86_64-unknown-linux-gnu.ll  cuda_blackscholes_all-host-x86_64-unknown-linux-gnu.s  cuda_blackscholes_all.cu  cuda_blackscholes_all.cu-cuda-nvptx64-nvidia-cuda.fatbin
examples/bscan-cuda/: kjrun_llvm18.sh  main.cu
examples/btree/: Makefile  golden_result_btree.txt  kjrun_llvm18.sh  kjrun_llvm18_before_ci.sh
examples/cc-cuda/: Makefile  gen_small_graph.py  main.cu  small_test.egr
examples/cfd/: 0.ll  3.ll  (+57 more)
runtime/: CMakeLists.txt
runtime/include/: cudaKernelImpl.h  cudaRuntimeImpl.h  cudaRuntimeImpl_pytorch.h
runtime/src/vortex/: CMakeLists.txt
runtime/src/vortex/host/: cudaRuntimeImpl.cpp
runtime/src/vortex/kernel/: Makefile  cudaKernelImpl.cpp
(+419 files in other folders)
